--- a/cxhash.html
+++ b/cxhash.html
@@ -101,14 +101,9 @@ window.addEventListener('DOMContentLoaded', main);
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <ul class="simple nested-toc-section">getGitHash
-      <li><a class="reference" href="#getGitHash"
-    title="getGitHash(): string">getGitHash(): string</a></li>
-
-  </ul>
-  <ul class="simple nested-toc-section">verifyHash
-      <li><a class="reference" href="#verifyHash%2Cstring%2CT"
-    title="verifyHash[T](kata: string; hsx: T): bool">verifyHash[T](kata: string; hsx: T): bool</a></li>
+      <ul class="simple nested-toc-section">checkHash
+      <li><a class="reference" href="#checkHash%2Cstring%2CT"
+    title="checkHash[T](kata: string; hsx: T)">checkHash[T](kata: string; hsx: T)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">createHash
@@ -116,9 +111,14 @@ window.addEventListener('DOMContentLoaded', main);
     title="createHash(kata: string): auto">createHash(kata: string): auto</a></li>
 
   </ul>
-  <ul class="simple nested-toc-section">checkHash
-      <li><a class="reference" href="#checkHash%2Cstring%2CT"
-    title="checkHash[T](kata: string; hsx: T)">checkHash[T](kata: string; hsx: T)</a></li>
+  <ul class="simple nested-toc-section">getGitHash
+      <li><a class="reference" href="#getGitHash"
+    title="getGitHash(): string">getGitHash(): string</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">verifyHash
+      <li><a class="reference" href="#verifyHash%2Cstring%2CT"
+    title="verifyHash[T](kata: string; hsx: T): bool">verifyHash[T](kata: string; hsx: T): bool</a></li>
 
   </ul>
 
@@ -132,8 +132,7 @@ window.addEventListener('DOMContentLoaded', main);
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"><pre>
-Library     : nimcx.nim
+  <p class="module-desc"><pre>Library     : nimcx.nim
 
 Module      : cxhashes.nim
 
@@ -155,7 +154,9 @@ Description : provides convenience functions for hashes</pre>
   <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="checkHash,string,T"></a>
+
+<div id="checkHash-procs-all">
+<div id="checkHash,string,T">
 <dt><pre><span class="Keyword">proc</span> <a href="#checkHash%2Cstring%2CT"><span class="Identifier">checkHash</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">kata</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">hsx</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span></pre></dt>
 <dd>
 
@@ -164,16 +165,12 @@ Description : provides convenience functions for hashes</pre>
 
 
 </dd>
-<a id="verifyHash,string,T"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#verifyHash%2Cstring%2CT"><span class="Identifier">verifyHash</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">kata</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">hsx</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span></pre></dt>
-<dd>
+</div>
 
-<p>verifyHash</p>
-<p>checks hash of a string and returns true or false </p>
+</div>
 
-
-</dd>
-<a id="createHash,string"></a>
+<div id="createHash-procs-all">
+<div id="createHash,string">
 <dt><pre><span class="Keyword">proc</span> <a href="#createHash%2Cstring"><span class="Identifier">createHash</span></a><span class="Other">(</span><span class="Identifier">kata</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">auto</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
@@ -187,13 +184,35 @@ Description : provides convenience functions for hashes</pre>
 <span class="Identifier">checkHash</span><span class="Punctuation">(</span><span class="Identifier">zz</span><span class="Punctuation">,</span> <span class="Identifier">ahash</span><span class="Punctuation">)</span></pre>
 
 </dd>
-<a id="getGitHash"></a>
+</div>
+
+</div>
+
+<div id="getGitHash-procs-all">
+<div id="getGitHash">
 <dt><pre><span class="Keyword">proc</span> <a href="#getGitHash"><span class="Identifier">getGitHash</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 getGitHash to get the git hash during compile 
 
 </dd>
+</div>
+
+</div>
+
+<div id="verifyHash-procs-all">
+<div id="verifyHash,string,T">
+<dt><pre><span class="Keyword">proc</span> <a href="#verifyHash%2Cstring%2CT"><span class="Identifier">verifyHash</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">kata</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">hsx</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span></pre></dt>
+<dd>
+
+<p>verifyHash</p>
+<p>checks hash of a string and returns true or false </p>
+
+
+</dd>
+</div>
+
+</div>
 
 </dl></div>
 
@@ -204,7 +223,7 @@ getGitHash to get the git hash during compile
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-07-03 09:58:22 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-01-29 20:06:28 UTC</small>
       </div>
     </div>
   </div>
