--- a/cxstats.html
+++ b/cxstats.html
@@ -107,9 +107,9 @@ window.addEventListener('DOMContentLoaded', main);
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <ul class="simple nested-toc-section">showStats
-      <li><a class="reference" href="#showStats%2CRunningStat%2Cint%2Cint"
-    title="showStats(x: RunningStat; n: int = 3; xpos: int = 1)">showStats(x: RunningStat; n: int = 3; xpos: int = 1)</a></li>
+      <ul class="simple nested-toc-section">median
+      <li><a class="reference" href="#median%2CopenArray%5Bfloat%5D"
+    title="median(xs: openArray[float]): float">median(xs: openArray[float]): float</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">rolling_zscore
@@ -120,15 +120,15 @@ window.addEventListener('DOMContentLoaded', main);
 
   </ul>
   <ul class="simple nested-toc-section">showRegression
-      <li><a class="reference" href="#showRegression%2CopenArray%5B%5D%2CopenArray%5B%5D%2Cint%2Cint"
-    title="showRegression(x, y: openArray[float | int]; n: int = 5; xpos: int = 1)">showRegression(x, y: openArray[float | int]; n: int = 5; xpos: int = 1)</a></li>
-  <li><a class="reference" href="#showRegression%2CRunningRegress%2Cint%2Cint"
+      <li><a class="reference" href="#showRegression%2CRunningRegress%2Cint%2Cint"
     title="showRegression(rr: RunningRegress; n: int = 5; xpos: int = 1)">showRegression(rr: RunningRegress; n: int = 5; xpos: int = 1)</a></li>
+  <li><a class="reference" href="#showRegression%2CopenArray%5B%5D%2CopenArray%5B%5D%2Cint%2Cint"
+    title="showRegression(x, y: openArray[float | int]; n: int = 5; xpos: int = 1)">showRegression(x, y: openArray[float | int]; n: int = 5; xpos: int = 1)</a></li>
 
   </ul>
-  <ul class="simple nested-toc-section">median
-      <li><a class="reference" href="#median%2CopenArray%5Bfloat%5D"
-    title="median(xs: openArray[float]): float">median(xs: openArray[float]): float</a></li>
+  <ul class="simple nested-toc-section">showStats
+      <li><a class="reference" href="#showStats%2CRunningStat%2Cint%2Cint"
+    title="showStats(x: RunningStat; n: int = 3; xpos: int = 1)">showStats(x: RunningStat; n: int = 3; xpos: int = 1)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">zscore
@@ -147,8 +147,7 @@ window.addEventListener('DOMContentLoaded', main);
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"><pre>
-Library     : nimcx.nim
+  <p class="module-desc"><pre>Library     : nimcx.nim
 
 Module      : cxstats.nim
 
@@ -172,7 +171,62 @@ Description : provides functions pertaining to statistcs and calculations</pre>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="showStats,RunningStat,int,int"></a>
+
+<div id="median-procs-all">
+<div id="median,openArray[float]">
+<dt><pre><span class="Keyword">proc</span> <a href="#median%2CopenArray%5Bfloat%5D"><span class="Identifier">median</span></a><span class="Other">(</span><span class="Identifier">xs</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+
+</dd>
+</div>
+
+</div>
+
+<div id="rolling_zscore-procs-all">
+<div id="rolling_zscore,openArray[float],openArray[float],float">
+<dt><pre><span class="Keyword">proc</span> <a href="#rolling_zscore%2CopenArray%5Bfloat%5D%2CopenArray%5Bfloat%5D%2Cfloat"><span class="Identifier">rolling_zscore</span></a><span class="Other">(</span><span class="Identifier">data</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">observed_window</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span><span class="Other">;</span>
+                    <span class="Identifier">decay</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Other">=</span> <span class="FloatNumber">0.9</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+
+</dd>
+</div>
+
+</div>
+
+<div id="showRegression-procs-all">
+<div id="showRegression,RunningRegress,int,int">
+<dt><pre><span class="Keyword">proc</span> <a href="#showRegression%2CRunningRegress%2Cint%2Cint"><span class="Identifier">showRegression</span></a><span class="Other">(</span><span class="Identifier">rr</span><span class="Other">:</span> <span class="Identifier">RunningRegress</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">5</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span> {.
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+<p>showRegression</p>
+<p>Displays RunningRegress data from an already formed RunningRegress </p>
+
+
+</dd>
+</div>
+<div id="showRegression,openArray[],openArray[],int,int">
+<dt><pre><span class="Keyword">proc</span> <a href="#showRegression%2CopenArray%5B%5D%2CopenArray%5B%5D%2Cint%2Cint"><span class="Identifier">showRegression</span></a><span class="Other">(</span><span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">float</span> <span class="Operator">|</span> <span class="Identifier">int</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">5</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span></pre></dt>
+<dd>
+
+<p>showRegression</p>
+<p>quickly display RunningRegress data based on input of two openarray data series</p>
+<pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
+<span class="Keyword">var</span> <span class="Identifier">a</span> <span class="Operator">=</span> <span class="Operator">@</span><span class="Punctuation">[</span><span class="DecNumber">1</span><span class="Punctuation">,</span><span class="DecNumber">2</span><span class="Punctuation">,</span><span class="DecNumber">3</span><span class="Punctuation">,</span><span class="DecNumber">4</span><span class="Punctuation">,</span><span class="DecNumber">5</span><span class="Punctuation">]</span>
+<span class="Keyword">var</span> <span class="Identifier">b</span> <span class="Operator">=</span> <span class="Operator">@</span><span class="Punctuation">[</span><span class="DecNumber">1</span><span class="Punctuation">,</span><span class="DecNumber">2</span><span class="Punctuation">,</span><span class="DecNumber">3</span><span class="Punctuation">,</span><span class="DecNumber">4</span><span class="Punctuation">,</span><span class="DecNumber">7</span><span class="Punctuation">]</span>
+<span class="Identifier">showRegression</span><span class="Punctuation">(</span><span class="Identifier">a</span><span class="Punctuation">,</span><span class="Identifier">b</span><span class="Punctuation">)</span></pre>
+
+</dd>
+</div>
+
+</div>
+
+<div id="showStats-procs-all">
+<div id="showStats,RunningStat,int,int">
 <dt><pre><span class="Keyword">proc</span> <a href="#showStats%2CRunningStat%2Cint%2Cint"><span class="Identifier">showStats</span></a><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">RunningStat</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">3</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span> {.
     <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
@@ -206,29 +260,12 @@ Description : provides functions pertaining to statistcs and calculations</pre>
 <span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
 
 </dd>
-<a id="showRegression,openArray[],openArray[],int,int"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#showRegression%2CopenArray%5B%5D%2CopenArray%5B%5D%2Cint%2Cint"><span class="Identifier">showRegression</span></a><span class="Other">(</span><span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">float</span> <span class="Operator">|</span> <span class="Identifier">int</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">5</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span></pre></dt>
-<dd>
+</div>
 
-<p>showRegression</p>
-<p>quickly display RunningRegress data based on input of two openarray data series</p>
-<pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
-<span class="Keyword">var</span> <span class="Identifier">a</span> <span class="Operator">=</span> <span class="Operator">@</span><span class="Punctuation">[</span><span class="DecNumber">1</span><span class="Punctuation">,</span><span class="DecNumber">2</span><span class="Punctuation">,</span><span class="DecNumber">3</span><span class="Punctuation">,</span><span class="DecNumber">4</span><span class="Punctuation">,</span><span class="DecNumber">5</span><span class="Punctuation">]</span>
-<span class="Keyword">var</span> <span class="Identifier">b</span> <span class="Operator">=</span> <span class="Operator">@</span><span class="Punctuation">[</span><span class="DecNumber">1</span><span class="Punctuation">,</span><span class="DecNumber">2</span><span class="Punctuation">,</span><span class="DecNumber">3</span><span class="Punctuation">,</span><span class="DecNumber">4</span><span class="Punctuation">,</span><span class="DecNumber">7</span><span class="Punctuation">]</span>
-<span class="Identifier">showRegression</span><span class="Punctuation">(</span><span class="Identifier">a</span><span class="Punctuation">,</span><span class="Identifier">b</span><span class="Punctuation">)</span></pre>
+</div>
 
-</dd>
-<a id="showRegression,RunningRegress,int,int"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#showRegression%2CRunningRegress%2Cint%2Cint"><span class="Identifier">showRegression</span></a><span class="Other">(</span><span class="Identifier">rr</span><span class="Other">:</span> <span class="Identifier">RunningRegress</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">5</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span> {.
-    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">]</span></span>.}</pre></dt>
-<dd>
-
-<p>showRegression</p>
-<p>Displays RunningRegress data from an already formed RunningRegress </p>
-
-
-</dd>
-<a id="zscore,openArray[SomeNumber]"></a>
+<div id="zscore-procs-all">
+<div id="zscore,openArray[SomeNumber]">
 <dt><pre><span class="Keyword">proc</span> <a href="#zscore%2CopenArray%5BSomeNumber%5D"><span class="Identifier">zscore</span></a><span class="Other">(</span><span class="Identifier">data</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">SomeNumber</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span> {.<span class="Identifier">inline</span>.}</pre></dt>
 <dd>
 
@@ -249,21 +286,9 @@ Description : provides functions pertaining to statistcs and calculations</pre>
 <span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span> </pre>
 
 </dd>
-<a id="rolling_zscore,openArray[float],openArray[float],float"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#rolling_zscore%2CopenArray%5Bfloat%5D%2CopenArray%5Bfloat%5D%2Cfloat"><span class="Identifier">rolling_zscore</span></a><span class="Other">(</span><span class="Identifier">data</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">observed_window</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span><span class="Other">;</span>
-                    <span class="Identifier">decay</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Other">=</span> <span class="FloatNumber">0.9</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
-<dd>
+</div>
 
-
-
-</dd>
-<a id="median,openArray[float]"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#median%2CopenArray%5Bfloat%5D"><span class="Identifier">median</span></a><span class="Other">(</span><span class="Identifier">xs</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
-<dd>
-
-
-
-</dd>
+</div>
 
 </dl></div>
 
@@ -274,7 +299,7 @@ Description : provides functions pertaining to statistcs and calculations</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-07-03 09:58:20 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-01-29 20:06:28 UTC</small>
       </div>
     </div>
   </div>
