--- a/cxversion.html
+++ b/cxversion.html
@@ -102,7 +102,7 @@ window.addEventListener('DOMContentLoaded', main);
   <a class="reference reference-toplevel" href="#10" id="60">Consts</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#CXLIBVERSION"
-    title="CXLIBVERSION = &quot;1.0.8&quot;">CXLIBVERSION</a></li>
+    title="CXLIBVERSION = &quot;1.1.1&quot;">CXLIBVERSION</a></li>
 
   </ul>
 </li>
@@ -118,19 +118,20 @@ window.addEventListener('DOMContentLoaded', main);
 <p>Module      : cxversion.nim</p>
 <p>Status      : stable</p>
 <p>License     : MIT opensource</p>
-<p>Latest      : 2020-09-26</p>
+<p>Latest      : 2022-01-29</p>
 <p>Note        : holds the current version of this library </p>
 </p>
   <div class="section" id="10">
 <h1><a class="toc-backref" href="#10">Consts</a></h1>
 <dl class="item">
-<a id="CXLIBVERSION"></a>
-<dt><pre><a href="cxversion.html#CXLIBVERSION"><span class="Identifier">CXLIBVERSION</span></a> <span class="Other">=</span> <span class="StringLit">&quot;1.0.8&quot;</span></pre></dt>
+<div id="CXLIBVERSION">
+<dt><pre><a href="cxversion.html#CXLIBVERSION"><span class="Identifier">CXLIBVERSION</span></a> <span class="Other">=</span> <span class="StringLit">&quot;1.1.1&quot;</span></pre></dt>
 <dd>
 
 
 
 </dd>
+</div>
 
 </dl></div>
 
@@ -141,7 +142,7 @@ window.addEventListener('DOMContentLoaded', main);
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-07-03 09:57:24 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-01-29 20:06:19 UTC</small>
       </div>
     </div>
   </div>
